<resources>
    <string name="app_name">brsons</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used in login and reset password activity -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password? Click here to reset</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="submit_btn">Submit</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout_btn">Logout</string>

    <!-- Strings used in main activity -->
    <string name="text_tab1">Jewelry designs</string>
    <string name="text_view1">Check your Jewelry design</string>
    <string name="text_tab2">Upload Jewelry</string>
    <string name="text_view2">Upload Jewelry designs</string>
    <string name="text_tab3">Gold &amp; Silver Rates</string>
    <string name="text_view3">Add Gold and Silver rates</string>
    <string name="text_tab4">Slider Images</string>
    <string name="text_view4">Add the slider images for website</string>
    <string name="text_tab5">Enquiries</string>
    <string name="text_view5">Details of the customer enquired</string>

    <!-- Strings used in upload image activity -->
    <string name="Category">Category</string>
    <string name="SubCategory">Sub Category</string>
    <string name="choose_btn">Choose Image</string>
    <string name="name">Name</string>
    <string name="checkbox">Latest Product</string>
    <string name="upload_btn">Upload</string>

    <!-- Strings used in Quotation form -->
    <string name="quotation">Quotation Form</string>
    <string name="customer">Customer</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="desc">Description</string>
    <string name="grams">Grams</string>
    <string name="price_gram">Price/gram</string>
    <string name="gst">GST</string>
    <string name="amount">Amount</string>
    <string name="total">Total Amount</string>
    <string name="generateBtn">Generate PDF</string>
    <string name="openBtn">Open PDF</string>
    <string name="title_activity_splash_screen">splashScreen</string>

    <!-- Strings used in Gold and Silver rates -->
    <string name="rate_title">Add Gold and Silver Rates</string>
    <string name="gold_rate">Gold Rate</string>
    <string name="silver_rate">Silver Rate</string>
    <string name="gold_text">Gold Rate:</string>
    <string name="sliver_text">Silver Rate:</string>
    <string name="submitBtn">Submit</string>

    <!-- Strings used in Slider activity -->
    <string name="title1">Slider Title1</string>
    <string name="title2">Slider Title2</string>
    <string name="title3">Slider Title3</string>
    <string name="desc1">Slider Description1</string>
    <string name="desc2">Slider Description2</string>
    <string name="desc3">Slider Description3</string>

</resources>