<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBlack"
    tools:context="com.example.brsons.models.RateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/rateGold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/gold_text"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
            android:id="@+id/rateGold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toEndOf="@id/rateGold_text"
            android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/rateSilver_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/sliver_text"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
            android:id="@+id/rateSilver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:layout_toEndOf="@id/rateSilver_text"/>

        </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/viewJewels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/rate_title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gold_rate"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <EditText
                android:id="@+id/goldRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/silver_rate"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <EditText
                android:id="@+id/silverRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/button_background"
                android:text="@string/submitBtn"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>