<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBlack"
    android:fitsSystemWindows="true"
    tools:context=".models.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/reset_password"
            android:textColor="@color/colorGold"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/reset_email"
            android:hint="@string/prompt_email"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/reset_password"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:text="@string/submit_btn"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>