<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.brsons.models.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBlack">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/colorBlack"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingTop="50dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageView"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:focusable="true">
            <LinearLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:background="@drawable/round_background"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_image_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:text="@string/text_tab1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightBlack" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_view1"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/imageUpload"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_gravity="fill"
            android:focusable="true">
            <LinearLayout
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:background="@drawable/round_background"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_add_photo_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:text="@string/text_tab2"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightBlack" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_view2"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/enquiry"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_gravity="fill">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:background="@drawable/round_background"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_enquiry_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:text="@string/text_tab3"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightBlack" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_view3"
                    android:padding="5dp"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/enquiryDetails"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_gravity="fill"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="5dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="94dp"
                    android:background="@drawable/round_background"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_people_24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:text="@string/text_tab4"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorLightBlack" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_view4"
                    android:textColor="@color/colorBlack"
                    android:padding="5dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
</ScrollView>